Fix API compile